[b-1] Refactoring after the code review  - deleted transitive dependencies  - added configuration parameters for connection pool  - moved logback-test.xml into tests  - renamed impl -> jdbs  - @Autowared only on setters/constructors  - changed web context  - replaced facade with DTO object  - start using getClass() in loggers

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
     <servlet-mapping>
         <servlet-name>rest-api</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/v1/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
