--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <modelmapper.version>2.3.0</modelmapper.version>
         <jackson.version>2.9.7</jackson.version>
         <logback.version>1.0.13</logback.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <lombok.version>1.18.4</lombok.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.23.0</mockito.version>
@@ -48,14 +49,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <path>/</path>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -69,6 +62,11 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-jdbc</artifactId>
+                <version>${spring.framework}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
                 <version>${spring.framework}</version>
             </dependency>
 
@@ -113,6 +111,12 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
 
             <!-- lombok -->
