[lb] liquibase - added embeded h2 database - splited test and main contexts - created integration tests for jdbc dao - added property for H2 server mode

--- a/movieland-dao-jdbc/src/test/resources/db/properties.yml
+++ b/movieland-dao-jdbc/src/test/resources/db/properties.yml
@@ -1,6 +1,6 @@
 jdbc:
   driver : org.h2.Driver
-  url : jdbc:h2:~/test;AUTO_SERVER=TRUE
+  url : jdbc:h2:~/test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
   username : sa
   password : sa
   initialSize : 1
