[lb] liquibase - added embeded h2 database - splited test and main contexts - created integration tests for jdbc dao - added property for H2 server mode - added liquibase for integrational tests

--- a/movieland-dao-jdbc/pom.xml
+++ b/movieland-dao-jdbc/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
