--- a/movieland-service-default/pom.xml
+++ b/movieland-service-default/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>movieland-service</artifactId>
             <version>${app.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.satsukd</groupId>
+            <artifactId>movieland-dao-jdbc</artifactId>
+            <version>${app.version}</version>
+        </dependency>
         <!-- logs -->
         <dependency>
             <groupId>org.slf4j</groupId>
