rx-remove xml configuration -removed web.xml -removed spring context xml's

--- a/movieland-web/pom.xml
+++ b/movieland-web/pom.xml
@@ -21,6 +21,7 @@
                 <version>2.2</version>
                 <configuration>
                     <path>/</path>
+                    <port>8080</port>
                 </configuration>
             </plugin>
             <plugin>
